fixing colors of right and wrong,fixing start and next button so they are aligned

--- a/style.css
+++ b/style.css
@@ -61,3 +61,28 @@ body.wrong {
 btn:hover {
     border-color: blueviolet;
 }
+
+.btn.correct {
+    --hue: var(--hue-correct);
+    color: black;
+}
+
+.btn.wrong {
+    --hue: var(--hue-wrong);
+}
+
+.start-btn, .next-btn {
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hide {
+    display: none;
+}
